--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
 
   <body>
     <div class="followMeBar">A</div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="teste"></div>
     <div class="followMeBar">B</div>
     <br>
     <br>
